# runtime

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  SECURITY.md  build.sh  classify_rule.yaml  download_3rd_party.py  version.cmake
cmake/device/: CMakeLists.txt
example/1_basic_features/event/3_ipcevent_multi_device/: CMakeLists.txt  README.md  proc_a.cpp  proc_b.cpp  run.sh
example/memory/8_physical_memory_sharing_withoutpid/: CMakeLists.txt  README.md  proc_a.cpp  proc_b.cpp
example/profiling/2_subscribe_model/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/acl/acl_tdt_channel/: tensor_data_transfer.cpp
src/acl/acl_tdt_queue/: queue.cpp  queue_process.cpp
src/acl/aclrt_c/common/: acl_rt.c  ge_executor_rt.h  log_inner.h  model_config_rt.c  model_config_rt.h
src/acl/aclrt_c/runtime/: callback.c  context.c  device.c  host_func.c  memory.c  stream.c
src/acl/aclrt_impl/: CMakeLists.txt  acl.cpp  acl_rt_impl.h  acl_rt_wrapper.h  device.cpp  event.cpp  init_callback_manager.cpp  init_callback_manager.h  kernel.cpp  memory.cpp  model_ri.cpp  notify.cpp
src/acl/aclrt_impl/toolchain/: profiling_manager.cpp
src/acl/common/: json_parser.cpp  json_parser.h  log_inner.cpp  prof_reporter.h
src/aicpu_sched/aicpu_cust_schedule/: CMakeLists.txt
src/aicpu_sched/aicpu_cust_schedule/common/: aicpusd_status.h
src/aicpu_sched/aicpu_cust_schedule/core/: aicpusd_args_parser.cpp
src/aicpu_sched/aicpu_kernel/: CMakeLists.txt
src/aicpu_sched/aicpu_schedule/: CMakeLists.txt
src/aicpu_sched/aicpu_schedule/common/: aicpusd_feature_ctrl.h  aicpusd_feature_ctrl_open_source.cpp  aicpusd_hal_interface_ref.h  aicpusd_status.h  feature_ctrl_common.cpp
src/aicpu_sched/aicpu_schedule/core/: aicpusd_cust_so_manager.cpp  aicpusd_interface_process.cpp  aicpusd_interface_process.h  aicpusd_threads_process.cpp
src/aicpu_sched/aicpu_schedule/execute/: main.cpp
src/aicpu_sched/aicpu_schedule/statistic/: aicpusd_proc_mem_statistic.cpp
src/aicpu_sched/aicpu_sharder/: aicpu_sharder_log.h
src/aicpu_sched/stub/: stackcore_stub.cpp
src/cmodel_driver/: driver_impl.c
src/dfx/adump/: generate_register_init.py
src/dfx/adump/adcore/: CMakeLists.txt  adx_api.cpp
src/dfx/adump/adump/: CMakeLists.txt  adx_dump_record.cpp
src/dfx/adump/proto/: dump_task.proto
src/dfx/error_manager/: CMakeLists.txt  error_code.json  error_manager.cc  error_manager.h
src/dfx/log/liblog/: CMakeLists.txt
src/dfx/msprof/collector/: CMakeLists.txt
src/inc/runtime/: acc_error_info.h  inner_kernel.h  rt_inner_dfx.h  rt_inner_mem.h  rt_inner_model.h  rt_inner_stream.h  rt_inner_task.h
src/mmpa/: CMakeLists.txt
src/platform/: CMakeLists.txt  platform_error_define.h  platform_info.cpp  platform_infos_def.cpp  platform_infos_impl.cpp  platform_infos_impl.h  platform_infos_utils.cpp  platform_infos_utils.h  platform_log.h  platform_manager_v2.cpp  platform_manager_v2.h
src/platform/platform_config/cann-dev/: Ascend350_354f.ini  Ascend350_355e.ini  Ascend950DT_950x.ini  Ascend950DT_950y.ini  Ascend950DT_9571.ini  Ascend950DT_9572.ini  Ascend950DT_9573.ini  Ascend950DT_9574.ini  Ascend950DT_9575.ini  Ascend950DT_9576.ini  Ascend950DT_9577.ini  Ascend950DT_9578.ini  Ascend950DT_9581.ini  Ascend950DT_9582.ini  Ascend950DT_9583.ini  Ascend950DT_9584.ini  Ascend950DT_9585.ini  Ascend950DT_9586.ini  Ascend950DT_9587.ini  Ascend950DT_9588.ini  Ascend950DT_9591.ini  Ascend950DT_9592.ini  Ascend950DT_9595.ini  Ascend950DT_9596.ini  Ascend950DT_95A1.ini  Ascend950DT_95A2.ini  Ascend950PR_950z.ini  Ascend950PR_9579.ini  Ascend950PR_957b.ini  Ascend950PR_957c.ini  Ascend950PR_957d.ini  Ascend950PR_9589.ini  Ascend950PR_958b.ini  Ascend950PR_9599.ini
src/platform/stub/: platform_manager_v2_stub.cpp
src/queue_schedule/client/: CMakeLists.txt
src/queue_schedule/common/: bqs_log.h  bqs_so_manager.cpp  bqs_so_manager.h  bqs_util.h
src/queue_schedule/server/: bind_relation.h  data_obj_manager.h  msprof_api_adapter.cpp  msprof_api_adapter.h  profile_manager.h  queue_manager.h  router_server.h
src/queue_schedule/server/hccl/: comm_channel_manager.h
src/queue_schedule/stub/: stub_tsd_event_client.cpp
src/runtime/: CMakeLists.txt
src/runtime/api/: api.hpp  api_c.cc  api_c.h  api_c_context.cc  api_c_device.cc  api_c_event.cc  api_c_kernel.cc  api_c_mbuf.cc  api_c_memory.cc  api_c_model.cc  api_c_soc.cc  api_c_soma.cc  api_c_standard_soc.cc  api_c_stream.cc  api_c_tiny_stub.cc  api_c_uvm.cc  api_david.cc  api_global_err.cc  api_handle_guard.cc  api_handle_guard.h  api_preload_task.cc  api_soma.hpp  inner.cc  task_abort.hpp
src/runtime/cmake/: cmodel.cmake  platform.cmake  runtime.cmake  tiny.cmake  v200.cmake
src/runtime/cmodel_driver/: CMakeLists.txt  driver_api.c  driver_impl.c
src/runtime/config/610_lite/: dev_info_proc_func.cc  dev_info_reg.cc
src/runtime/config/910_96/: dev_info_proc_func.cc  dev_info_reg.cc
src/runtime/config/910_B_93/: dev_info_proc_func.cc  dev_info_reg.cc
src/runtime/config/950/: dev_info_proc_func.cc  dev_info_reg.cc
src/runtime/config/adc/: dev_info_proc_func.cc  dev_info_reg.cc
src/runtime/core/: CMakeLists.txt  cmodel.cmake  platform.cmake  runtime.cmake  tiny.cmake  v200.cmake
src/runtime/driver/: driver.cc  npu_driver.cc  npu_driver.hpp  npu_driver_base.hpp  npu_driver_dcache_lock_common.cpp  npu_driver_dcache_lock_david.cpp  npu_driver_mem.cc  npu_driver_queue.cc  npu_driver_res.cc  npu_driver_standard_soc.cc  npu_driver_tiny.cpp  npu_driver_tiny_stub.cc  npu_driver_win.cc  xpu_driver.hpp
src/runtime/feature/: cmodel.cmake  platform.cmake  runtime.cmake  tiny.cmake  v200.cmake
src/runtime/inc/: base_david.hpp  config.hpp  runtime.hpp  stub_task.hpp
src/runtime/tprt/: CMakeLists.txt
src/tprt/: CMakeLists.txt
src/tsd/: CMakeLists.txt
src/tsd/tsdclient/: CMakeLists.txt
tests/ut/adump/: CMakeLists.txt
tests/ut/error_manager/: CMakeLists.txt
tests/ut/msprof/: CMakeLists.txt
tests/ut/platform/: CMakeLists.txt
tests/ut/queue_schedule/: CMakeLists.txt
tests/ut/tsd/: CMakeLists.txt
(+2287 files in other folders)
