# -----------------------------------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# -----------------------------------------------------------------------------------------------------------
set(CMAKE_VERBOSE_MAKEFILE ON)
set(BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
project (tsd)
set(INSTALL_LIBRARY_DIR lib)
set(INSTALL_RUNTIME_DIR bin)
if (AOSCORE_LLVM_MUSL)
    add_definitions(-D_AOSCORE_)
endif()

message("-- INSTALL_LIBRARY_DIR   " ${INSTALL_LIBRARY_DIR}})
message("-- INSTALL_RUNTIME_DIR   " ${INSTALL_RUNTIME_DIR}})

include(CMakePackageConfigHelpers)

add_subdirectory(tsdclient)
install_package(
    PACKAGE tsd
    TARGETS tsdclient
)
